# romulus

./: .gitignore  backup.sh  hsv_tuner.py  test_gui.py
install/: local_setup.sh  setup.sh
install/cake_decorator/share/cake_decorator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/control/lib/control/: control_node
install/control/share/control/: package.sh  package.xml
install/pattern/lib/pattern/: pattern_node
install/pattern/share/pattern/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur5e_visual_servo/lib/ur5e_visual_servo/: cake_surface_detector.py  gui_interface.py  hand_eye_calibrator.py  object_detector.py  svg_pattern_projector.py  visual_servo_controller.py  zed_surface_detector.py
install/ur5e_visual_servo/share/ur5e_visual_servo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision/lib/vision/: vision_node
install/vision/share/vision/: package.sh  package.xml
log/: latest_build
src/cake_decorator/: CMakeLists.txt
src/cake_interfaces/: CMakeLists.txt  package.xml
src/cake_interfaces/msg/: PatternPoints.msg
src/control/: setup.py
src/pattern/: package.xml  setup.cfg  setup.py
src/pattern/launch/: pattern.launch.py
src/pattern/pattern/: pattern_node.py
src/vision/: package.xml  setup.py
src/vision/launch/: vision.launch.py
src/vision/vision/: hsv_tuner.py  vision_node.py
(+536 files in other folders)
